--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
                     <div id="world">
                         <div id="head">
 
+                            <div class="iro iro-mid">
+                                <div class="iro-mid__side iro-mid__side-top"></div>
+                                <div class="iro-mid__side iro-mid__side-left"></div>
+                                <div class="iro-mid__side iro-mid__side-right"></div>
+
+                                <div class="iro-mid__side iro-mid__side-front"></div>
+                                <div class="iro-mid__side iro-mid__side-back"></div>
+                                
+                            </div>
                             
 
                             <!--
