--- a/src/index.html
+++ b/src/index.html
@@ -15,58 +15,40 @@
                         <div id="head">
 
                             <div class="iro iro-mid">
-                                <div class="iro-mid__side iro-mid__side-top"></div>
-                                <div class="iro-mid__side iro-mid__side-left"></div>
-                                <div class="iro-mid__side iro-mid__side-right"></div>
-
-                                <div class="iro-mid__side iro-mid__side-front"></div>
-                                <div class="iro-mid__side iro-mid__side-back"></div>
-                                
+                                <div class="iro__side iro__side-top"></div>
+                                <div class="iro__side iro__side-left"></div>
+                                <div class="iro__side iro__side-right"></div>
+                                <div class="iro__side iro__side-front"></div>
+                                <div class="iro__side iro__side-back"></div>
                             </div>
                             
+                            <div class="iro iro-left">
+                                <div class="iro__side iro__side-top"></div>
+                                <div class="iro__side iro__side-left"></div>
+                                <div class="iro__side iro__side-right"></div>
+                                <div class="iro__side iro__side-front"></div>
+                                <div class="iro__side iro__side-back"></div>                                
+                                <div class="iro__side iro__side-bottom"></div>                                
+                            </div>
 
-                            <!--
-                            <div class="hairlayer hairlayer-0">
-                                <div class="hairlayer-0__side hairlayer-0__side-top"></div>
-                                <div class="hairlayer-0__side hairlayer-0__side-left"></div>
-                                <div class="hairlayer-0__side hairlayer-0__side-right"></div>
-                                <div class="hairlayer-0__side hairlayer-0__side-bottom"></div>
-                                <div class="hairlayer-0__side hairlayer-0__side-front"></div>
-                                <div class="hairlayer-0__side hairlayer-0__side-back"></div>
+                            <div class="iro iro-right">
+                                <div class="iro__side iro__side-top"></div>
+                                <div class="iro__side iro__side-left"></div>
+                                <div class="iro__side iro__side-right"></div>
+                                <div class="iro__side iro__side-front"></div>
+                                <div class="iro__side iro__side-back"></div>                                
+                                <div class="iro__side iro__side-bottom"></div>                                
                             </div>
-                            <div class="hairlayer hairlayer-1">
-                                <div class="hairlayer-1__side hairlayer-1__side-top"></div>
-                                <div class="hairlayer-1__side hairlayer-1__side-left"></div>
-                                <div class="hairlayer-1__side hairlayer-1__side-right"></div>
-                                <div class="hairlayer-1__side hairlayer-1__side-bottom"></div>
-                                <div class="hairlayer-1__side hairlayer-1__side-front"></div>
-                                <div class="hairlayer-1__side hairlayer-1__side-back"></div>
+
+                            <div class="jaws">
+                                <div class="jaws__side jaws__side-top"></div>
+                                <div class="jaws__side jaws__side-left"></div>
+                                <div class="jaws__side jaws__side-right"></div>
+                                <div class="jaws__side jaws__side-front"></div>
+                                <div class="jaws__side jaws__side-back"></div>                                
+                                <div class="jaws__side jaws__side-bottom"></div>                                
                             </div>
-                            <div class="hairlayer hairlayer-2">
-                                <div class="hairlayer-2__side hairlayer-2__side-top"></div>
-                                <div class="hairlayer-2__side hairlayer-2__side-left"></div>
-                                <div class="hairlayer-2__side hairlayer-2__side-right"></div>
-                                <div class="hairlayer-2__side hairlayer-2__side-bottom"></div>
-                                <div class="hairlayer-2__side hairlayer-2__side-front"></div>
-                                <div class="hairlayer-2__side hairlayer-2__side-back"></div>
-                            </div>
-                            <div class="hairlayer hairlayer-3">
-                                <div class="hairlayer-3__side hairlayer-3__side-top"></div>
-                                <div class="hairlayer-3__side hairlayer-3__side-left"></div>
-                                <div class="hairlayer-3__side hairlayer-3__side-right"></div>
-                                <div class="hairlayer-3__side hairlayer-3__side-bottom"></div>
-                                <div class="hairlayer-3__side hairlayer-3__side-front"></div>
-                                <div class="hairlayer-3__side hairlayer-3__side-back"></div>
-                            </div>
-                            <div class="hairlayer hairlayer-4">
-                                <div class="hairlayer-4__side hairlayer-4__side-top"></div>
-                                <div class="hairlayer-4__side hairlayer-4__side-left"></div>
-                                <div class="hairlayer-4__side hairlayer-4__side-right"></div>
-                                <div class="hairlayer-4__side hairlayer-4__side-bottom"></div>
-                                <div class="hairlayer-4__side hairlayer-4__side-front"></div>
-                                <div class="hairlayer-4__side hairlayer-4__side-back"></div>
-                            </div>
-                            -->
+
                             <div class="head__side head__side-top"></div>
                             <div class="head__side head__side-bottom"></div>
                             <div class="head__side head__side-left"></div>
