now with video or image

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div class="containers">
-            <div id="invisible video-container">
+            <div id="video-container" class="video-container invisible">
                 <video id="video" width="720" height="560" autoplay muted></video>
             </div>
 
-            <div id="image-container" class="invisible image-container">
+            <div id="image-container" class="image-container invisible">
                 <img id="image" class="image" src="assets/images/obama.jpg" >
             </div>
             <div id="output-container">
