--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,12 @@
     </head>
     <body>
         <div class="containers">
-            <div id="video-container" class="video-container invisible">
-                <video id="video" width="720" height="560" autoplay muted></video>
-            </div>
+            <select id="image-select" class="source-select" onchange="selectImage(selectedIndex)" ></select>
 
-            <div id="image-container" class="image-container invisible">
-                <select id="image-select" onchange="selectImage(selectedIndex)" class="select">
-                </select>
+            <div id="video-container" class="source-container video-container invisible">
+                <video id="video" class="video" width="720" height="560" autoplay muted></video>
+            </div>
+            <div id="image-container" class="source-container image-container invisible">
                 <img id="image" class="image" src="assets/images/obama.jpg" >
             </div>
             <div id="output-container">
